# marnav

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitlab-ci.yml  .travis.yml  .vimrc.local  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  Makefile  Packaging.cmake  README.md  TODO.md  angle.cpp  angle.hpp  conanfile.py  cppcheck-suppress.txt  date.cpp  date.hpp  doxygen.conf.in  mtw.cpp  mtw.hpp  nmea.cpp  nmea.hpp  nmea_optional.cpp  nmea_sentence.cpp  optional.hpp  rmc.cpp  rmc.hpp  sentence.cpp  sentence.hpp  time.cpp  time.hpp  unique.hpp
examples/: CMakeLists.txt  README.md  bitset_iterate.cpp  create_nmea_from_ais.cpp  create_nmea_from_ais_2.cpp  nmea_multiplexer.cpp  parse_ais.cpp  parse_nmea.cpp  parse_nrx.cpp  read_ais.cpp  read_nmea.cpp  read_nmea_boostasio.cpp  read_seatalk.cpp  seatalk_snippets.cpp  select.cpp  serial_to_tcp.cpp  simple_seatalk_nmea_converter.cpp
examples/qtnmeadiag/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
examples/subdirectory/: CMakeLists.txt  foobar.cpp
examples/subproject/: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.cmake.in  doxygen.conf.in  nmeadump.cpp  nmeasum.cpp  nmeatool.cpp
src/ais/: ais.cpp  ais.hpp  bitset.hpp  message.cpp  message.hpp  message_01.cpp  message_01.hpp  message_02.cpp  message_02.hpp  message_03.cpp  message_03.hpp  message_05.cpp  message_05.hpp
src/geo/: angle.cpp  angle.hpp
src/io/: device.hpp  nmea_serial.cpp  nmea_serial.hpp  seatalk_serial.cpp  seatalk_serial.hpp  serial.cpp  serial.hpp
src/marnav/: resource.rc.in  version.cpp.in  version.hpp.in
src/marnav-io/: default_nmea_reader.cpp  default_seatalk_reader.cpp  nmea_reader.cpp  seatalk_reader.cpp  serial.cpp
src/nmea/: aam.cpp  aam.hpp  angle.cpp  angle.hpp  bod.cpp  bod.hpp  constants.cpp  constants.hpp  date.cpp  date.hpp  dbt.cpp  dbt.hpp  dpt.cpp  dpt.hpp  gga.cpp  gga.hpp  gll.cpp  gll.hpp  gsa.cpp  gsa.hpp  gsv.cpp  gsv.hpp  hdg.cpp  hdg.hpp  io.hpp  mtw.cpp  mtw.hpp  mwv.cpp  mwv.hpp  nmea.cpp  nmea.hpp  optional.hpp  rmb.cpp  rmb.hpp  rmc.cpp  rmc.hpp  rte.cpp  rte.hpp  sentence.cpp  sentence.hpp  (+13 more)
src/nmeasum/: CMakeLists.txt  resource.rc.in
src/nmeatool/: CMakeLists.txt  nmeatool.cpp  resource.rc.in
src/seatalk/: message.cpp  message.hpp  message_00.cpp  message_00.hpp  message_01.cpp  message_01.hpp  message_10.cpp  message_10.hpp  message_11.cpp  message_11.hpp  message_20.cpp  message_20.hpp  message_21.cpp  message_21.hpp  message_22.cpp  message_22.hpp  message_23.cpp  message_23.hpp  message_25.cpp  message_25.hpp  message_27.cpp  message_27.hpp  seatalk.cpp  seatalk.hpp
src/utils/: bitset.hpp  optional.hpp  unique.hpp
src_test/: CMakeLists.txt  test-ais-sample.cpp  test-nmea-sample.cpp
src_test/ais/: Test_ais.cpp  Test_ais_angle.cpp  Test_ais_message.cpp  Test_ais_message_01.cpp  Test_ais_message_02.cpp  Test_ais_message_03.cpp  Test_ais_message_04.cpp  Test_ais_message_05.cpp  Test_ais_message_10.cpp  Test_ais_message_18.cpp  Test_ais_message_19.cpp  Test_ais_message_24.cpp  Test_message_01.cpp  Test_message_02.cpp  Test_message_03.cpp  Test_message_05.cpp
src_test/geo/: Test_geo_angle.cpp  Test_geo_geodesic.cpp  Test_geo_greatcircle.cpp
src_test/io/: Test_io_nmea_reader.cpp  Test_io_nmea_serial.cpp  Test_io_seatalk_serial.cpp
src_test/nmea/: Test_aam.cpp  Test_hdg.cpp  Test_mtw.cpp  Test_mwv.cpp  Test_nmea.cpp  Test_nmea_aam.cpp  Test_nmea_alm.cpp  Test_nmea_angle.cpp  Test_nmea_apb.cpp  Test_nmea_bod.cpp  Test_nmea_bwc.cpp  Test_nmea_bwr.cpp  Test_nmea_bww.cpp  Test_nmea_date.cpp  Test_nmea_dbk.cpp  Test_nmea_dbt.cpp  Test_nmea_dpt.cpp  Test_nmea_duration.cpp  Test_nmea_fsi.cpp  Test_nmea_gga.cpp  Test_nmea_gll.cpp  Test_nmea_gns.cpp  Test_nmea_gsa.cpp  Test_nmea_gsv.cpp  Test_nmea_hdg.cpp  Test_nmea_hdm.cpp  Test_nmea_hsc.cpp  Test_nmea_io.cpp  Test_nmea_mtw.cpp  Test_nmea_mwd.cpp  Test_nmea_mwv.cpp  Test_nmea_osd.cpp  Test_nmea_pgrme.cpp  Test_nmea_r00.cpp  Test_nmea_rma.cpp  Test_nmea_rmb.cpp  Test_nmea_rmc.cpp  Test_nmea_rot.cpp  Test_nmea_rsa.cpp  Test_nmea_rte.cpp  (+28 more)
src_test/seatalk/: Test_seatalk_message.cpp  Test_seatalk_message_00.cpp  Test_seatalk_message_01.cpp  Test_seatalk_message_10.cpp  Test_seatalk_message_11.cpp  Test_seatalk_message_20.cpp  Test_seatalk_message_21.cpp  Test_seatalk_message_22.cpp  Test_seatalk_message_23.cpp  Test_seatalk_message_25.cpp  Test_seatalk_message_27.cpp
src_test/utils/: Test_utils_bitset.cpp
test/: CMakeLists.txt  test-ais-sample.cpp  test-nmea-sample.cpp
test/ais/: Benchmark_ais_message.cpp  Test_ais.cpp  Test_ais_angle.cpp  Test_ais_binary_001_11.cpp  Test_ais_binary_200_10.cpp  Test_ais_message.cpp  Test_ais_message_01.cpp  Test_ais_message_02.cpp  Test_ais_message_03.cpp  Test_ais_message_04.cpp  Test_ais_message_05.cpp  Test_ais_message_06.cpp  Test_ais_message_07.cpp  Test_ais_message_08.cpp  Test_ais_message_09.cpp  Test_ais_message_10.cpp  Test_ais_message_11.cpp  Test_ais_message_12.cpp  Test_ais_message_13.cpp  Test_ais_message_14.cpp  Test_ais_message_17.cpp  Test_ais_message_18.cpp  Test_ais_message_19.cpp  Test_ais_message_20.cpp  Test_ais_message_21.cpp  Test_ais_message_22.cpp  Test_ais_message_23.cpp  Test_ais_message_24.cpp  Test_ais_rate_of_turn.cpp
test/geo/: Test_geo_angle.cpp  Test_geo_cpa.cpp  Test_geo_geodesic.cpp  Test_geo_region.cpp
test/io/: Test_io_nmea_reader.cpp  Test_io_seatalk_reader.cpp
test/marnav-io/: Benchmark_nmea_io.cpp  Test_io_nmea_reader.cpp  Test_io_seatalk_reader.cpp
test/math/: Test_math_floatingpoint.cpp  Test_math_matrix.cpp  Test_math_quaternion.cpp  Test_math_vector.cpp  floatingpoint.cpp  floatingpoint_ulps.cpp
test/nmea/: Benchmark_nmea_checksum.cpp  Benchmark_nmea_io.cpp  Benchmark_nmea_manufacturer.cpp  Benchmark_nmea_sentence.cpp  Benchmark_nmea_split.cpp  Test_nmea.cpp  Test_nmea_aam.cpp  Test_nmea_ack.cpp  Test_nmea_alm.cpp  Test_nmea_angle.cpp  Test_nmea_apa.cpp  Test_nmea_apb.cpp  Test_nmea_bec.cpp  Test_nmea_bod.cpp  Test_nmea_bwc.cpp  Test_nmea_bwr.cpp  Test_nmea_bww.cpp  Test_nmea_checksum.cpp  Test_nmea_date.cpp  (+89 more)
(+892 files in other folders)
